Pick up status reporting from flatpak-builder

--- a/master.cfg
+++ b/master.cfg
@@ -5,6 +5,7 @@ from future.utils import iteritems
 from future.utils import string_types
 from buildbot.process.build import Build
 from buildbot.plugins import *
+from buildbot.process import logobserver
 from buildbot import locks
 from twisted.python import log
 from twisted.internet import defer
@@ -326,6 +327,45 @@ def shellArgOptional(commands):
 def shellArg(commands):
     return util.ShellArg(logfile='stdio', haltOnFailure=True, command=commands)
 
+class TitleObserver(logobserver.LogObserver):
+    title_re = re.compile (r"\x1b]2;.*\x07")
+
+    def __init__(self):
+        pass
+
+    def gotData(self, stream, data):
+        for m in self.title_re.findall(data):
+            title = m[4:-1]
+            self.step.setTitle(title)
+
+class FlatpakBuildStep(steps.ShellCommand):
+
+    def __init__(self, **kwargs):
+        self.title = u"Building"
+        command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
+                   '--user', '--install-deps-from=flathub',
+                   util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
+                   '--default-branch', flathub_branch,
+                   '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
+                   'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
+        steps.ShellCommand.__init__(self,
+                                    haltOnFailure = True,
+                                    logEnviron = False,
+                                    usePTY = True,
+                                    command = command,
+                                    **kwargs)
+        self.addLogObserver('stdio', TitleObserver())
+
+    def setTitle(self, title):
+        if title.startswith("flatpak-builder: "):
+            title = title[17:]
+        self.title = title
+        self.realUpdateSummary()
+        self.updateSummary()
+
+    def getCurrentSummary(self):
+        return {u'step': self.title}
+
 def create_build_factory():
     build_factory = util.BuildFactory()
     build_factory.buildClass = BuildIDLockBuild
@@ -360,16 +400,7 @@ def create_build_factory():
                         # Clean up rofiles-fuse
                         shellArg('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
                     ]),
-                steps.ShellCommand(
-                    name='Build',
-                    haltOnFailure=True,
-                    logEnviron=False,
-                    command=['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
-                             '--user', '--install-deps-from=flathub',
-                             util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
-                             '--default-branch', flathub_branch,
-                             '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
-                             'builddir', util.Interpolate('%(prop:flathub-manifest)s')]),
+                FlatpakBuildStep(name='Build'),
                 steps.ShellCommand(
                     name='Check for AppStream xml',
                     doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
