Add cleanup build job
At the moment all this does it show the free space and space
use on all workers.

--- a/master.cfg
+++ b/master.cfg
@@ -107,6 +107,8 @@ for i in range(1,flathub_num_master_workers+1):
     c['workers'].append (worker.LocalWorker(name))
     local_workers.append(name)
 
+build_workers = []
+
 for w in worker_config.iterkeys():
     wc = worker_config[w]
     passwd = wc['password']
@@ -115,6 +117,7 @@ for w in worker_config.iterkeys():
         max_builds = wc['max-builds']
     c['workers'].append (worker.Worker(w, passwd, max_builds=max_builds))
     if wc.has_key('arches'):
+        build_workers.append(w)
         for a in wc['arches']:
             if not a in flathub_arches:
                 flathub_arches.append(a)
@@ -250,7 +253,7 @@ class BuildIDLockBuild(Build):
     def startBuild(self, build_status, workerforbuilder):
         buildid = self.getProperty('flathub-build-id')
         lock = BuildIDLockBuild.find_or_create_master_lock_for_buildid(buildid)
-        self.setLocks([lock.access('exclusive')])
+        self.setLocks([lock.access('exclusive'), flatpak_worker_lock.access('counting')])
         return Build.startBuild(self, build_status, workerforbuilder)
 
 ####### BUILDERS
@@ -283,6 +286,9 @@ def ShouldBuildArch(build):
     return True
 
 flatpak_update_lock = util.WorkerLock("flatpak-update")
+# This lock is taken in a shared mode for builds, but in exclusive mode when doing
+# global worker operations like cleanup
+flatpak_worker_lock = util.WorkerLock("flatpak-worker-lock", maxCount=1000)
 repo_lock = util.MasterLock("repo")
 
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
@@ -639,6 +645,77 @@ c['builders'].append(
                        collapseRequests=True,
                        workernames=local_workers,
                        factory=build_app_factory))
+
+# Builder cleanup support
+
+force_cleanup = schedulers.ForceScheduler(
+    name="force-cleanup",
+    buttonName="Force cleanup",
+    label="Force a worker cleanup",
+    builderNames=["Cleanup Workers"],
+
+    codebases=[util.CodebaseParameter(codebase='', hide=True)],
+    reason=util.StringParameter(name="reason",
+                                label="reason:",
+                                required=True, default="force clean", size=80),
+    properties=[
+        util.StringParameter(name="cleanup-worker", label="Worker: (empty for all)", required=False),
+    ]
+)
+
+@util.renderer
+def computeCleanupWorkers(props):
+    clean_worker = props.getProperty ('cleanup-worker', None)
+    if clean_worker and clean_worker in build_workers:
+        workers = [clean_worker]
+    else:
+        workers = build_workers
+
+    return map(lambda x: "cleanup-" + x, workers)
+
+cleanup = schedulers.Triggerable(name="cleanup-all-workers",
+                                 builderNames=computeCleanupWorkers)
+
+c['schedulers'].append(cleanup)
+c['schedulers'].append(force_cleanup)
+
+cleanup_factory = util.BuildFactory()
+cleanup_factory.addSteps([
+    steps.FileDownload(name='downloading cleanup.sh',
+                       haltOnFailure=True,
+                       hideStepIf=hide_on_success,
+                       mode=0755,
+                       mastersrc="scripts/cleanup.sh",
+                       workerdest="cleanup.sh"),
+    steps.ShellCommand(
+        name='Status',
+        logEnviron=False,
+        command='./cleanup.sh')
+    ])
+
+cleanup_all_factory = util.BuildFactory()
+cleanup_all_factory.addSteps([
+    steps.Trigger(name='Clean up all workers',
+                  schedulerNames=['cleanup-all-workers'],
+                  waitForFinish=True,
+                  set_properties={
+                      "cleanup-worker" : util.Property('cleanup-worker')
+                  })
+])
+
+for worker in build_workers:
+    c['builders'].append(
+        util.BuilderConfig(name='cleanup-' + worker,
+                           workername=worker,
+                           locks=[flatpak_worker_lock.access('exclusive')],
+                           factory=cleanup_factory))
+    status_builders.append('build-' + arch)
+
+c['builders'].append(
+    util.BuilderConfig(name='Cleanup Workers',
+                       collapseRequests=True,
+                       workernames=local_workers,
+                       factory=cleanup_all_factory))
 
 ####### BUILDBOT SERVICES
 
