Automatically update the appdata checkours in update-repo

--- a/master.cfg
+++ b/master.cfg
@@ -511,8 +511,17 @@ update_repo_factory.addSteps([
                             shellArg(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])]),
     steps.ShellCommand(name='clean up',
                        logEnviron=False,
-                       command=['rm', '-rf', 'repo', 'import-repo'])
-    ])
+                       command=['rm', '-rf', 'repo', 'import-repo']),
+    steps.FileDownload(name='downloading update-appdata.sh',
+                       haltOnFailure=True,
+                       hideStepIf=hide_on_success,
+                       mode=0755,
+                       mastersrc="scripts/update-appdata.sh",
+                       workerdest="update-appdata.sh"),
+    steps.ShellCommand(name='update appdata',
+                       logEnviron=False,
+                       command=['./update-appdata.sh', flathub_upstream_repo_path])
+])
 
 def asciiBasename(s):
     return os.path.basename(s).encode('ascii', 'ignore')
