Add timeout to update-repo shell sequence
We ran into a timeout on the pull-local into the repo.

--- a/master.cfg
+++ b/master.cfg
@@ -503,6 +503,7 @@ update_repo_factory.addSteps([
     steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
                         haltOnFailure=True,
+                        timeout=3600,
                         locks=[repo_lock.access('exclusive')],
                         commands=[
                             shellArg(['rsync', '-rltv', '--ignore-existing',
