Better regexp for titles
We don't allow escapes or other weird things in the titles.

This means we properly handle the case where there are two
title-setting escapes in the same buffer (it used to pick the longest
match which would contain both escapes as one).

--- a/master.cfg
+++ b/master.cfg
@@ -334,7 +334,7 @@ def shellArg(commands):
     return util.ShellArg(logfile='stdio', haltOnFailure=True, command=commands)
 
 class TitleObserver(logobserver.LogObserver):
-    title_re = re.compile (r"\x1b]2;.*\x07")
+    title_re = re.compile (r"\x1b]2;[\s\w!/\\#$%&'*+-.^_`|~:~]*\x07")
 
     def __init__(self):
         pass
