Show build description in the buildbot UI
This uses the "build" return value from getResultSummary to set
the status text on the parent build to the decription of the thing
being built.

--- a/master.cfg
+++ b/master.cfg
@@ -308,6 +308,10 @@ class ReadConfigStep(steps.BuildStep, CompositeStepMixin):
         self.setProperty("flathub-config", flathub_config, "flathub.json")
         defer.returnValue(buildbot.process.results.SUCCESS)
 
+    def getResultSummary(self):
+        r = {}
+        r[u'build'] =  "%s" % (self.build.getProperty("flathub-desc", "?"))
+        return r
 
 class MaybeAddSteps(steps.BuildStep):
     parms = steps.BuildStep.parms + ['steps']
@@ -475,6 +479,10 @@ class AddArchSteps(steps.BuildStep):
                 ])
         return buildbot.process.results.SUCCESS
 
+    def getResultSummary(self):
+        r = {}
+        r[u'build'] =  "%s" % (self.build.getProperty("flathub-desc", "?"))
+        return r
 
 update_repo_factory = util.BuildFactory()
 update_repo_factory.addSteps([
@@ -530,7 +538,6 @@ def asciiBasename(s):
 @util.renderer
 def computeBuildProperties(props):
     buildnumber = props.getProperty('buildnumber')
-    orig_reason = props.getProperty('reason')
     repository = props.getProperty('repository')
     force_test_build = props.getProperty ('force-test-build', False)
     branch = props.getProperty('branch')
@@ -566,9 +573,20 @@ def computeBuildProperties(props):
         "flathub-branch": data.fp_branch,
         "flathub-official-build": data.official and not force_test_build,
         "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
-        "reason": builddesc,
-        "orig-reason": orig_reason
+        "flathub-desc": builddesc
     }
+
+class FlathubPropertiesStep(steps.SetProperties):
+    def __init__(self, **kwargs):
+        steps.SetProperties.__init__(self,
+                                     hideStepIf=hide_on_success,
+                                     properties=computeBuildProperties,
+                                     **kwargs)
+
+    def getResultSummary(self):
+        r = super(steps.SetProperties, self).getResultSummary()
+        r[u'build'] =  "%s" % self.build.getProperty("flathub-desc", "?")
+        return r
 
 def ShouldUpdateRepo(step):
     if not BuildIsOfficial(step):
@@ -583,9 +601,7 @@ def ShouldUpdateRepo(step):
 
 build_app_factory = util.BuildFactory()
 build_app_factory.addSteps([
-    steps.SetProperties(name="Set flathub properties",
-                        hideStepIf=hide_on_success,
-                        properties=computeBuildProperties),
+    FlathubPropertiesStep(name="Set flathub properties"),
     steps.Trigger(name='Build all platforms',
                   haltOnFailure=True,
                   schedulerNames=['build-all-platforms'],
@@ -600,6 +616,7 @@ build_app_factory.addSteps([
                       'flathub-manifest' : util.Property('flathub-manifest'),
                       'flathub-branch' : util.Property('flathub-branch'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
+                      'flathub-desc' : util.Property('flathub-desc'),
                       'reason' : util.Property('reason')
                   }),
     steps.Trigger(name='Update repository',
@@ -618,7 +635,8 @@ build_app_factory.addSteps([
                       'flathub-manifest' : util.Property('flathub-manifest'),
                       'flathub-branch' : util.Property('flathub-branch'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
-                      'reason' : util.Property('reason')
+                      'flathub-desc' : util.Property('flathub-desc'),
+                      'reason' : util.Property('flathub-buildnumber')
                   }),
     steps.MasterShellCommand(name="Clean up storage on master",
                              alwaysRun=True,
