Make sure partial arch build still work
We ended up trying to tar up a non-existing directory if we
skipped the build of an arch.

--- a/master.cfg
+++ b/master.cfg
@@ -385,6 +385,18 @@ def create_build_factory():
                   repourl=util.Property('repository'),
                   mode='incremental', branch='master', submodules=True),
         ReadConfigStep(name="Read config"),
+        steps.ShellSequence(
+            name='Init',
+            haltOnFailure=True,
+            logEnviron=False,
+            commands=[
+                # Always do this because we upload the repo, even if its empty if we don't build this arch
+                shellArg(['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
+                shellArg(['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
+                shellArg(['mkdir', '-p', 'repo/screenshots']),
+                # Clean up rofiles-fuse
+                shellArg('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
+                ]),
         MaybeAddSteps(
             ShouldBuildArch,
             name="Should we build",
@@ -399,16 +411,11 @@ def create_build_factory():
                     haltOnFailure=True,
                     logEnviron=False,
                     commands=[
-                        shellArg(['mkdir', '-p', 'repo/screenshots']),
-                        shellArg(['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
-                        shellArg(['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
                         # Add flathub remote
                         shellArg(['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
-                                               'flathub', flathub_upstream_repo]),
+                                  'flathub', flathub_upstream_repo]),
                         # Update flathub remote url
                         shellArg(['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo, 'flathub']),
-                        # Clean up rofiles-fuse
-                        shellArg('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
                     ]),
                 FlatpakBuildStep(name='Build'),
                 steps.ShellCommand(
