--- a/master.cfg
+++ b/master.cfg
@@ -681,7 +681,9 @@ c['builders'].append(
                        workernames=local_workers,
                        factory=build_app_factory))
 
+##########################
 # Builder cleanup support
+##########################
 
 force_cleanup = schedulers.ForceScheduler(
     name="force-cleanup",
@@ -751,6 +753,60 @@ c['builders'].append(
                        collapseRequests=True,
                        workernames=local_workers,
                        factory=cleanup_all_factory))
+
+##########################
+# Repo import support
+##########################
+
+force_import = schedulers.ForceScheduler(
+    name="import",
+    buttonName="Import",
+    label="Import",
+    builderNames=["Import"],
+
+    codebases=[util.CodebaseParameter(codebase='', hide=True)],
+    properties=[
+        util.StringParameter(name="import-remote", label="Remote:", required=True),
+        util.StringParameter(name="import-refs", label="Refs: (empty for default)", required=False),
+    ]
+)
+
+c['schedulers'].append(force_import)
+
+@util.renderer
+def computeImportCommand(step):
+    remote = step.build.getProperty ('import-remote', 'no-remote'),
+    remote = remote[0].encode('ascii', 'ignore')
+    refs = step.build.getProperty ('import-refs', '')
+    default_imports = builds.imports.get(remote, [])
+    if not refs:
+        refs = ' '.join(default_imports)
+    return ['./import.sh', flathub_upstream_repo_path, remote, refs, flathub_gpg_homedir, flathub_gpg_key]
+
+force_import_factory = util.BuildFactory()
+force_import_factory.addSteps([
+    steps.FileDownload(name='downloading import.sh',
+                       haltOnFailure=True,
+                       hideStepIf=hide_on_success,
+                       mode=0755,
+                       mastersrc="scripts/import.sh",
+                       workerdest="import.sh"),
+    steps.ShellCommand(
+        name='Import',
+        haltOnFailure=True,
+        logEnviron=False,
+        usePTY=True,
+        timeout=3600,
+        command=computeImportCommand)
+])
+
+c['builders'].append(
+    util.BuilderConfig(name='Import',
+                       collapseRequests=True,
+                       locks=[repo_lock.access('exclusive')],
+                       workernames=flathub_update_workers,
+                       factory=force_import_factory))
+
 
 ####### BUILDBOT SERVICES
 
