Use utils.asciiize

--- a/master.cfg
+++ b/master.cfg
@@ -540,7 +540,7 @@ update_repo_factory.addSteps([
 ])
 
 def asciiBasename(s):
-    return os.path.basename(s).encode('ascii', 'ignore')
+    return utils.asciiize(os.path.basename(s))
 
 @util.renderer
 def computeBuildProperties(props):
@@ -568,7 +568,7 @@ def computeBuildProperties(props):
     if force_arches:
         arches_s = set()
         for arch in force_arches.split(","):
-            arches_s.add(arch.strip().encode('ascii', 'ignore'))
+            arches_s.add(utils.asciiize(arch.strip()))
         arches = list(arches_s)
 
     return {
@@ -776,7 +776,7 @@ c['schedulers'].append(force_import)
 @util.renderer
 def computeImportCommand(step):
     remote = step.build.getProperty ('import-remote', 'no-remote'),
-    remote = remote[0].encode('ascii', 'ignore')
+    remote = utils.asciiize(remote[0])
     refs = step.build.getProperty ('import-refs', '')
     default_imports = builds.imports.get(remote, [])
     if not refs:
