Try to work around weird error
As per log:
https://flathub.org/builds/#/builders/2/builds/274/steps/1/logs/err_html

We got:
 buildbot.config.ConfigErrors: BuildStep name must be a string or a renderable object: u'download x86_64 build result'

This could only be unicode if arch was, but I don't see how that happened.
Anyway, force it to be ascii.

--- a/master.cfg
+++ b/master.cfg
@@ -469,6 +469,7 @@ class AddArchSteps(steps.BuildStep):
     def run(self):
         arches = self.build.getProperty("flathub-arches", [])
         for arch in arches:
+            arch = utils.asciiize(arch)
             self.build.addStepsAfterCurrentStep(
                 [
                     steps.FileDownload(name='download ' + arch + ' build result',
