import: Use build-commit-from to import the imported refs
This means we get our own commit ids, and we get proper parents
for every commit, including correct static deltas for updates.

--- a/master.cfg
+++ b/master.cfg
@@ -289,6 +289,7 @@ flatpak_update_lock = util.WorkerLock("flatpak-update")
 # This lock is taken in a shared mode for builds, but in exclusive mode when doing
 # global worker operations like cleanup
 flatpak_worker_lock = util.WorkerLock("flatpak-worker-lock", maxCount=1000)
+import_lock = util.MasterLock("import")
 repo_lock = util.MasterLock("repo")
 
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
@@ -774,15 +775,23 @@ force_import = schedulers.ForceScheduler(
 
 c['schedulers'].append(force_import)
 
-@util.renderer
-def computeImportCommand(step):
+def getImportCommand(step, command):
     remote = step.build.getProperty ('import-remote', 'no-remote'),
     remote = utils.asciiize(remote[0])
     refs = step.build.getProperty ('import-refs', '')
-    default_imports = builds.imports.get(remote, [])
+    remote_data = builds.imports.get(remote)
+    default_imports = remote_data.get('refs', [])
     if not refs:
         refs = ' '.join(default_imports)
-    return ['./import.sh', flathub_upstream_repo_path, remote, refs, flathub_gpg_homedir, flathub_gpg_key]
+    return ['./import.sh', command, flathub_upstream_repo_path, remote, remote_data.get("repo"), remote_data.get("key"), refs, flathub_gpg_homedir, flathub_gpg_key]
+
+@util.renderer
+def computeImportCommandImport(step):
+    return getImportCommand(step, 'import')
+
+@util.renderer
+def computeImportCommandMerge(step):
+    return getImportCommand(step, 'merge')
 
 force_import_factory = util.BuildFactory()
 force_import_factory.addSteps([
@@ -798,13 +807,21 @@ force_import_factory.addSteps([
         logEnviron=False,
         usePTY=True,
         timeout=3600,
-        command=computeImportCommand)
+        command=computeImportCommandImport),
+    steps.ShellCommand(
+        name='Merge',
+        haltOnFailure=True,
+        logEnviron=False,
+        usePTY=True,
+        locks=[repo_lock.access('exclusive')],
+        timeout=3600,
+        command=computeImportCommandMerge)
 ])
 
 c['builders'].append(
     util.BuilderConfig(name='Import',
                        collapseRequests=True,
-                       locks=[repo_lock.access('exclusive')],
+                       locks=[import_lock.access('exclusive')],
                        workernames=flathub_update_workers,
                        factory=force_import_factory))
 
