--- a/master.cfg
+++ b/master.cfg
@@ -565,7 +565,10 @@ def computeBuildProperties(props):
         buildid = data.id
         builddesc = data.id
 
-    arches = flathub_arches
+    if data.only_arches:
+        arches = data.only_arches
+    else:
+        arches = flathub_arches
     force_arches = props.getProperty("force-arches", None)
     if force_arches:
         arches_s = set()
