Add custom-buildcmd builds.json option

--- a/master.cfg
+++ b/master.cfg
@@ -349,21 +349,30 @@ class TitleObserver(logobserver.LogObserver):
             title = m[4:-1]
             self.step.setTitle(title)
 
+
+
+@util.renderer
+def computeCommand(props):
+    command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
+               '--user', '--install-deps-from=flathub',
+               util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
+               '--default-branch', flathub_branch,
+               '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
+               'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
+    if props.getProperty("flathub-custom-buildcmd", False):
+        command = ['./build.sh', util.Property('flathub-arch')]
+    return command
+
 class FlatpakBuildStep(steps.ShellCommand):
+
 
     def __init__(self, **kwargs):
         self.title = u"Building"
-        command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
-                   '--user', '--install-deps-from=flathub',
-                   util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
-                   '--default-branch', flathub_branch,
-                   '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
-                   'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
         steps.ShellCommand.__init__(self,
                                     haltOnFailure = True,
                                     logEnviron = False,
                                     usePTY = True,
-                                    command = command,
+                                    command = computeCommand,
                                     **kwargs)
         self.addLogObserver('stdio', TitleObserver())
 
@@ -433,6 +442,8 @@ def create_build_factory():
                     name='Post-build work',
                     logEnviron=False,
                     commands=[
+                        # Ensure directory is there
+                        shellArg(['mkdir', '-p', 'builddir/screenshots']),
                         # Copy screenshots
                         shellArg(['cp', '-r', 'builddir/screenshots', 'repo/'])
                     ])
@@ -583,6 +594,7 @@ def computeBuildProperties(props):
         "flathub-buildnumber": buildnumber,
         "flathub-manifest": data.get_manifest(),
         "flathub-branch": data.fp_branch,
+        "flathub-custom-buildcmd": data.custom_buildcmd,
         "flathub-official-build": data.official and not force_test_build,
         "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
         "flathub-desc": builddesc
@@ -627,6 +639,7 @@ build_app_factory.addSteps([
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
                       'flathub-branch' : util.Property('flathub-branch'),
+                      'flathub-custom-buildcmd' : util.Property('flathub-custom-buildcmd'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'flathub-desc' : util.Property('flathub-desc'),
                       'reason' : util.Property('reason')
@@ -646,6 +659,7 @@ build_app_factory.addSteps([
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
                       'flathub-branch' : util.Property('flathub-branch'),
+                      'flathub-custom-buildcmd' : util.Property('flathub-custom-buildcmd'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'flathub-desc' : util.Property('flathub-desc'),
                       'reason' : util.Property('flathub-buildnumber')
