Add support for pull request testing

--- a/master.cfg
+++ b/master.cfg
@@ -13,6 +13,7 @@ import buildbot
 import subprocess, re, json
 import os.path
 from buildbot.steps.worker import CompositeStepMixin
+from buildbot.www.hooks.github import GitHubEventHandler
 
 import utils
 import builds
@@ -127,11 +128,11 @@ for w in worker_config.iterkeys():
         flathub_update_workers.append(w)
 
 
-def change_is_official(change):
+def change_should_build(change):
     try:
         info = builds.lookup_by_git(change.repository, change.branch)
         if info:
-            return info.official
+            return info.official or change.category == 'bot-build'
     except:
         pass
     return False
@@ -139,7 +140,7 @@ def change_is_official(change):
 ####### SCHEDULERS
 checkin = schedulers.AnyBranchScheduler(name="checkin",
                                         treeStableTimer=10,
-                                        change_filter=util.ChangeFilter(filter_fn=change_is_official),
+                                        change_filter=util.ChangeFilter(filter_fn=change_should_build),
                                         builderNames=["Build App"])
 
 @util.renderer
@@ -884,9 +885,46 @@ if auth:
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes.  Here we point to the buildbot clone of pyflakes.
 
+class FlathubGithubHandler(GitHubEventHandler):
+
+    def handle_issue_comment(self, payload, event):
+        body = payload["comment"]["body"]
+        assoc = payload["comment"]["author_association"]
+        issue_nr = payload["issue"]["number"]
+
+        offset = body.find("bot, build");
+        if offset == -1:
+            return [], 'git'
+
+        build_id = None
+        rest = body[offset+len("bot, build"):]
+        lines = rest.splitlines()
+        if len(lines) > 0:
+            words = lines[0].split()
+            if len(words) > 0:
+                build_id = words[0]
+
+        if not assoc in ["COLLABORATOR", "CONTRIBUTOR", "MEMBER", "OWNER"]:
+            return [], 'git'
+
+        project = payload['repository']['full_name']
+        if build_id:
+            project = 'forced-build-id/%s' % build_id
+        change = {
+            'branch': 'refs/pull/{}/merge'.format(issue_nr),
+            'repository': payload['repository']['html_url'],
+            'project': project,
+            'category': 'bot-build',
+            'author': payload['sender']['login'],
+            'comments': u'GitHub Pull Request #%d test build\n' % (issue_nr)
+        }
+
+        return [change], 'git'
+
 if flathub_github_change_secret != "":
     c['www']['change_hook_dialects'] = {
         'github': {
+            'class': FlathubGithubHandler,
             'secret': flathub_github_change_secret,
             'strict': True
         }
