Add some debug log

--- a/master.cfg
+++ b/master.cfg
@@ -904,7 +904,10 @@ class FlathubGithubHandler(GitHubEventHandler):
             if len(words) > 0:
                 build_id = words[0]
 
+        log.msg("Detected build test request in %s PR %d (id %s)" % (payload['repository']['html_url'], issue_nr, build_id))
+
         if not assoc in ["COLLABORATOR", "CONTRIBUTOR", "MEMBER", "OWNER"]:
+            log.msg("WARNING: Ignoring build test request due to lack of perms")
             return [], 'git'
 
         project = payload['repository']['full_name']
