--- a/master.cfg
+++ b/master.cfg
@@ -131,6 +131,7 @@ for w in worker_config.iterkeys():
 def change_should_build(change):
     try:
         info = builds.lookup_by_git(change.repository, change.branch)
+        log.msg("Should we build change: %s, info: %s" % (change, info))
         if info:
             return info.official or change.category == 'bot-build'
     except:
