Fix up log spew

--- a/master.cfg
+++ b/master.cfg
@@ -130,8 +130,9 @@ for w in worker_config.iterkeys():
 
 def change_should_build(change):
     try:
+        log.msg("Should we build change: %s" % (change))
         info = builds.lookup_by_git(change.repository, change.branch)
-        log.msg("Should we build change: %s, info: %s" % (change, info))
+        log.msg("info: %s" % (info))
         if info:
             return info.official or change.category == 'bot-build'
     except:
