Handle forced build ids in changes

--- a/master.cfg
+++ b/master.cfg
@@ -131,7 +131,10 @@ for w in worker_config.iterkeys():
 def change_should_build(change):
     try:
         log.msg("Should we build change: %s" % (change))
-        info = builds.lookup_by_git(change.repository, change.branch)
+        forced_id = None
+        if project.startswith("forced-build-id/"):
+            forced_id = project[len("forced-build-id/"):]
+        info = builds.lookup_by_git(change.repository, change.branch, forced_id)
         log.msg("info: %s" % (info))
         if info:
             return info.official or change.category == 'bot-build'
