--- a/master.cfg
+++ b/master.cfg
@@ -132,8 +132,8 @@ def change_should_build(change):
     try:
         log.msg("Should we build change: %s" % (change))
         forced_id = None
-        if project.startswith("forced-build-id/"):
-            forced_id = project[len("forced-build-id/"):]
+        if change.project.startswith("forced-build-id/"):
+            forced_id = change.project[len("forced-build-id/"):]
         info = builds.lookup_by_git(change.repository, change.branch, forced_id)
         log.msg("info: %s" % (info))
         if info:
