TitleObserver: Don't assert in gotData if data is None

--- a/master.cfg
+++ b/master.cfg
@@ -351,9 +351,10 @@ class TitleObserver(logobserver.LogObserver):
         pass
 
     def gotData(self, stream, data):
-        for m in self.title_re.findall(data):
-            title = m[4:-1]
-            self.step.setTitle(title)
+        if data:
+            for m in self.title_re.findall(data):
+                title = m[4:-1]
+                self.step.setTitle(title)
 
 
 
