Use new-style step for FlatpakBuildStep

--- a/master.cfg
+++ b/master.cfg
@@ -357,41 +357,52 @@ class TitleObserver(logobserver.LogObserver):
                 self.step.setTitle(title)
 
 
-
-@util.renderer
-def computeCommand(props):
-    command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
-               '--user', '--install-deps-from=flathub',
-               util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
-               '--default-branch', flathub_branch,
-               '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
-               'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
-    if props.getProperty("flathub-custom-buildcmd", False):
-        command = ['./build.sh', util.Property('flathub-arch')]
-    return command
-
-class FlatpakBuildStep(steps.ShellCommand):
-
-
+class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
     def __init__(self, **kwargs):
-        self.title = u"Building"
-        steps.ShellCommand.__init__(self,
-                                    haltOnFailure = True,
-                                    logEnviron = False,
-                                    usePTY = True,
-                                    command = computeCommand,
-                                    **kwargs)
+        self.setupShellMixin({'logEnviron': False,
+                              'usePTY': True})
+        steps.BuildStep.__init__(self, haltOnFailure = True, **kwargs)
         self.addLogObserver('stdio', TitleObserver())
+        self.title = u"Building"
+
+    @defer.inlineCallbacks
+    def run(self):
+        props = self.build.properties
+        id = props.getProperty("flathub-id")
+        self.title = "Building %s.json" % id
+        self.result_title = "Failed to build %s.json" % id
+        self.updateSummary()
+
+        command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
+                   '--user', '--install-deps-from=flathub',
+                   util.Property('extra-fb-args'),
+                   '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
+                   '--default-branch', flathub_branch,
+                   '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
+                   'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
+        if props.getProperty("flathub-custom-buildcmd", False):
+            command = ['./build.sh', util.Property('flathub-arch')]
+
+        rendered=yield self.build.properties.render(command)
+        cmd = yield self.makeRemoteShellCommand(command=rendered)
+        yield self.runCommand(cmd)
+
+        if not cmd.didFail():
+            self.result_title = "Built %s.json" % id
+
+        defer.returnValue(cmd.results())
 
     def setTitle(self, title):
         if title.startswith("flatpak-builder: "):
             title = title[17:]
         self.title = title
-        self.realUpdateSummary()
         self.updateSummary()
 
     def getCurrentSummary(self):
         return {u'step': self.title}
+
+    def getResultSummary(self):
+        return {u'step': self.result_title}
 
 def create_build_factory():
     build_factory = util.BuildFactory()
